test/errors/literals_error/zs/wrong_octal_literal_error.zs
package wrong_octal_literal_error;

const uint32 WRONG_OCTAL_LITERAL = 09;
